[tool.poetry]
name = "rusty-slm"
version = "0.2.0"
description = "Functions to interact with an SLM"
authors = ["maxastyler <maxastyler@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{ include = "rusty_slm" }]

[tool.poetry.dependencies]
grpcio = "^1.51.1"
grpcio-tools = "^1.51.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
